Changelog
=========

0.1a3 (Unreleased)
------------------

- Fix bug in gitignore template. [disko]


0.1a2 (2012-09-25)
------------------

- Pin Cheetah to meet the requirements of templer.core.


0.1a1 (2012-09-25)
------------------

- First public release.