@@ -1,4 +1,6 @@
 [buildout]
+extensions = mr.developer
+
 # this buildout is for developing kotti_paster itself.
 parts =
     kotti-paster
@@ -10,13 +12,18 @@ develop = .
 
 versions = versions
 
+find-links = https://nodeload.github.com/Pylons/Kotti/tarball/HEAD#egg=Kotti-0.8dev
+
 [versions]
 # pin Cheetah version for templer.core 1.0b4
 Cheetah=2.2.1
+Kotti = 0.8dev
 
 [kotti-paster]
 recipe = zc.recipe.egg
-eggs = kotti_paster
+eggs =
+    Kotti
+    kotti_paster
 dependent-scripts = true
 
 [pytest]
